--- a/index.html
+++ b/index.html
@@ -27,42 +27,38 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/saudi_person.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							<h2>Introduction</h2>
+							<p>Welcome to Career Connect, the platform where modern jobs meet young talent. Our mission is to empower job seekers and connect them with cutting-edge opportunities offered by emerging companies in the Saudi Arabian market. We aim to bridge the gap between forward-thinking employers and ambitious young professionals, creating a thriving ecosystem for career growth.</p>
+
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/exterior_2.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							<h2>About Us</h2>
+							<p>Career Connect was founded with a vision to revolutionize the job market in Saudi Arabia by focusing on modern industries and empowering the next generation of job seekers. Our platform provides an inclusive space for employers and job seekers to find their perfect match, offering tools and resources that ensure every application counts. By combining innovation, collaboration, and accessibility, we strive to make career-building opportunities more reachable for everyone..</p>
+
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/kingdom_centre.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<!-- <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
+							<h2></h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
@@ -71,20 +67,20 @@
 						<div class="image">
 							<img src="images/spotlight03.jpg" alt="" />
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Collaboration</h2>
+							<p>Our exclusive collaborators span a variety of industries, ensuring diverse and exciting opportunities for job seekers. From cutting-edge roles in sports organizations to dynamic positions in food service and landscaping, Career Connect is proud to partner with forward-thinking companies that align with our vision for modern, accessible employment. Our collaborators not only provide exclusive job postings but also actively contribute to our mission of fostering career growth and community development.</p>
 						</div>
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+										<img src="/images/gallery/fulls/SFA.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Ipsum Dolor</h3>
@@ -96,7 +92,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+										<img src="/images/gallery/fulls/mjs.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Feugiat Lorem</h3>
@@ -108,7 +104,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
+										<img src="images/gallery/fulls/saudi-landscape.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Magna Amet</h3>
@@ -233,7 +229,7 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Ipsum sed consequat</h2>
+							<h2>Services</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
@@ -303,7 +299,7 @@
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Contact Us</h2>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
@@ -337,7 +333,7 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; Career Connect. All rights reserved.</p>
 						</div>
 					</footer>
 
